--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,8 @@ buildscript {
     ext.kotlin_version = '2.3.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+       
     }
 
     dependencies {
@@ -17,7 +18,8 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        
     }
 }
 
